# mech-interp-mini-projects

./: .env.example
activation-patching/: ActivationPatching.ipynb
einops_drills/: Einops.ipynb  README.md  main.py  pyproject.toml
ioi-activation-patching/: ActivationPatching.ipynb  README.md  activation-patching.ipynb  main.py  pyproject.toml
torch_cnn/: README.md  TorchCNN.ipynb  main.py  pyproject.toml
torch_nn/: NeuralNet.ipynb  README.md  main.py  pyproject.toml
